# ForgeFormFEM

./: CMakeLists.txt  DEVLOG.md  README.md
Doc/: HOW Compile PETSC with MPI ADAPTADED MINE.docx  HOWTO.md
examples/: CMakeLists.txt  linear_test.cpp  linear_test_matrix.cpp  test_1elem.cpp  tetra_test.py  tetra_test_nl.py
src/: CMakeLists.txt  Domain_d.C  ForgeFormFEM.C  Matrices.C  Mechanical.C  PETSC_Solver.cpp  ReMesher.C  Solver.C  Solver_Eigen.C  Solver_Eigen.h  tensor3.C
src/include/: Domain_d.h  Matrix.h  ReMesher.h  Solver.h
